# Graphics-Playground

./: .gitignore  CMakeLists.txt  README.md
include/: opengl_playground.h
include/glad/: glad.h
src/: glad.c  main.cpp  opengl_playground.cpp
tests/: test_simple.cpp
